workloads/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ztphttpd
  labels:
    app: ztphttpd
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: ztphttpd
